<resources>
    <string name="app_name">ShanDuo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">sign in</string>
    <string name="login_in">login in</string>
    <string name="reg_get_check_count_timer">%1$d秒后重新获取</string>
    <string name="reg_get_check">发送验证码</string>
    <string name="dialog_loading">加载中&#8230;</string>
    <string name="toast_phone_null">手机号码不能为空</string>
    <string name="toast_phone_wrong">手机号码格式不正确</string>
    <string name="toast_code_null">验证码不能为空</string>
    <string name="toast_pwd_null">密码不能为空</string>
    <string name="toast_pwd_wrong">密码不能少于八位</string>
    <string name="app_login_phone">请输入手机号</string>
    <string name="app_login_account_hint">手机号/闪多号</string>
    <string name="app_login_password_hint">请输入登录密码</string>
    <string name="app_login_btn_forgetpassword">忘记了密码？</string>
    <string name="app_login_btn_newuser">新用户注册</string>
    <string name="app_login_btn_login">登录</string>
    <string name="app_login_cb_Rememberthepassword">记住密码</string>
    <string name="app_login_cb_automaticlogon">自动登录</string>
    <string name="app_modify_nickname">昵称</string>
    <string name="app_modify_Flicker">闪多号：</string>
    <string name="app_modify_Revisetheheadimage">点击修改头像</string>
    <string name="app_modify_Personalitysignature">个性签名</string>
    <string name="app_register_Gender">性别</string>
    <string name="app_login_Phonenumber">手机号码</string>
    <string name="app_modify_Dateofbirth">出生日期</string>
    <string name="app_modify_Confirmationofmodification">确认修改</string>
    <string name="app_register_boy">男</string>
    <string name="app_register_female">女</string>
    <string name="app_register_hint">请输入六位验证码</string>
    <string name="app_updeta_editing">编辑资料</string>
    <string name="app_updeta_preservation">保存</string>
    <string name="app_updeta_replace">更换背景</string>
    <string name="app_updeta_Basicinformation">基本资料</string>
    <string name="app_updeta_Emotionalstate">感情状态</string>
    <string name="app_updeta_Personalinformation">个人信息</string>
    <string name="app_updeta_Hometown">家乡</string>
    <string name="app_updeta_Occupation">职业</string>
    <string name="app_updeta_School">学校</string>
    <string name="app_modify_Flickera">闪多号</string>
    <string name="share_shanduo_friend">闪多好友</string>
    <string name="share_wechat_coment">朋友圈</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_sina">微博</string>
    <string name="share_report">举报</string>
    <string name="share_delete">删除</string>
    <string name="tips_no_act">暂无活动</string>
    <string name="tips_no_trend">暂无动态</string>
    <string name="tips_no_Record">暂无记录</string>
    <string name="tips_no_credit">没什么好看的</string>
    <string name="tips_no_token">必须登录才能查看好友活动哟~</string>
    <string name="tips_my_no_token">请先登录哦</string>
    <string name="tips_no_report">请选择举报内容</string>
    <string name="tips_loading">加载中#8230</string>
    <string name="tips_no_message">空空如也~</string>
    <string name="tips_no_customer">暂无客服</string>
    <string name="title_home">首页</string>
    <string name="title_chat">聊天</string>
    <string name="title_activity">发布</string>
    <string name="title_linkman">好友</string>
    <string name="title_my">我的</string>
    <string name="title_act">活动</string>
    <string name="title_trend">动态</string>
    <string name="My_activities">\t我的活动</string>
    <string name="My_dynamics">\t我的动态</string>
    <string name="Credit_center">\t信用中心</string>
    <string name="My_wallet">\t我的钱包</string>
    <string name="Member_Center">\t会员中心</string>
    <string name="Set_up">\t设置</string>
    <string name="Customer_service">\t客服中心</string>
    <string name="Loginandregistration">登录/注册</string>
    <string name="title_my_message">我的消息</string>
    <string name="Accountandsecurity">账户与安全</string>
    <string name="Messagenotification">消息通知</string>
    <string name="About_flicker">关于闪多</string>
    <string name="Privacy">隐私</string>
    <string name="Cleanupcaching">清理缓存</string>
    <string name="Sign_in">签到</string>
    <string name="The_first">第</string>
    <string name="day">天</string>
    <string name="Flicker_Purse">闪多钱包</string>
    <string name="Purse_balance">钱包余额</string>
    <string name="Pea_bean">闪多豆</string>
    <string name="Recharge">充值</string>
    <string name="Transaction_record">交易记录</string>
    <string name="title_money_one">赏金</string>
    <string name="title_refresh_count">刷新次数</string>
    <string name="Modifythepassword">修改密码</string>
    <string name="Old_cipher">旧密码：</string>
    <string name="New_password">新密码：</string>
    <string name="Confirmthe_newpassword">确认新密码：</string>
    <string name="hint_Prompt">若包含字母，请注意区分大小写</string>
    <string name="hint_newpassword">8-16位，至少包含数字/字母/字符2种组合</string>
    <string name="Forgetthepassword">忘记密码了？</string>
    <string name="Verificationofidentity">请输入支付密码，以验证身份</string>
    <string name="Settingupanewpaymentpassword">设置新的支付密码</string>
    <string name="hint_newpaymentpassword">请输入新的支付密码，用于支付验证</string>
    <string name="Completethemodification">完成修改</string>
    <string name="title_trend_info">动态详情</string>
    <string name="comment_place">评论区</string>
    <string name="toast_count_picture">最多选取9张图片</string>
    <string name="publish_act">发活动</string>
    <string name="publish_trend">发动态</string>
    <string name="title_search">搜索</string>
    <string name="title_link">通讯录</string>
    <string name="title_search_friend">搜索好友</string>
    <string name="title_search_group">搜索群组名字或群号</string>
    <string name="title_search_human">搜索用户</string>
    <string name="title_select_album">从相册选择</string>
    <string name="title_take_pic">拍摄</string>
    <string name="title_action">操作</string>
    <string name="title_save_pic">保存图片到相册</string>
    <string name="title_network_error">网络异常</string>
    <string name="tips_no_friend">暂无好友</string>
    <string name="tips_no_login">请先登录</string>
    <string name="tips_like">点赞成功</string>
    <string name="tips_unlike">已取消点赞</string>
    <string name="tips_no_group">暂无群组</string>
    <string name="click_back">再按一次退出程序</string>
    <string name="title_add">添加</string>
    <string name="title_add_link_friend">添加通讯录好友</string>
    <string name="title_add_wechat_friend">添加微信好友</string>
    <string name="title_add_qq_friend">添加QQ好友</string>
    <string name="shanduo_search_hint">搜索闪多号或手机号</string>
    <string name="title_join">报名</string>
    <string name="title_customer">客服</string>
    <string name="title_details">活动详情</string>
    <string name="confirm_join">确认报名</string>
    <string name="tips_no_user_join">暂无人加入</string>
    <string name="cancel_join">取消报名</string>
    <string name="cancel_activity">取消活动</string>
    <string name="title_button_report">立即举报</string>
    <string name="title_confirm_join_act">您确认参加活动吗</string>
    <string name="title_cancel_join_act">您确认取消参加活动吗</string>
    <string name="title_delete_friend">您确认删除该好友吗</string>
    <string name="title_delete_act">您确认删除该活动吗</string>
    <string name="title_delete_trend">您确认删除该动态吗</string>
    <string name="title_delete_replay">您确认删除该评论吗</string>
    <string name="title_cancel_activity">您确定不要它了吗</string>
    <string name="title_refuse">残忍拒绝吗？</string>
    <string name="title_detele_activity">您确定要删除活动吗</string>
    <string name="action_bar_back">返回</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="agree">同意</string>
    <string name="agreed">已同意</string>
    <string name="refuse">拒绝</string>
    <string name="refused">已拒绝</string>
    <string name="done">完成</string>
    <string name="friend_allow_all">允许任何人添加</string>
    <string name="friend_refuse_all">拒绝任何人添加</string>
    <string name="friend_need_confirm">需验证</string>
    <string name="default_group_name">默认分组</string>
    <string name="change_group_error">修改分组失败</string>
    <string name="people">人</string>
    <string name="login_error">登录失败，请稍后重试</string>
    <string name="login_error_timeout">登录失败，当前无网络</string>
    <string name="login_succ">登录成功</string>
    <string name="kick_logout">你的账号已在其他终端登录,重新登录</string>
    <string name="operate_fail">操作失败</string>
    <string name="need_permission">您需要开启权限,并重启应用</string>
    <string name="save_succ">保存成功</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="save_fail">保存失败</string>
    <string name="tls_expire">账号登录已过期，请重新登录</string>
    <string name="env_normal">当前连接正式环境</string>
    <string name="env_test">当前连接测试环境</string>
    <string name="file_not_found">未找到文件，请稍后重试</string>
    <string name="google_service_not_available">google推送服务不可用，请检查google play设置</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="verif_hint">我们将给您手机发送一条验证码，请注意查收。</string>
    <string name="Received_hint">请输入您收到的验证码：</string>
    <string name="send_success">发送成功</string>
    <string name="home_conversation_tab">会话</string>
    <string name="home_setting_tab">设置</string>
    <string name="conversation_system">系统消息</string>
    <string name="conversation_system_friend">新朋友</string>
    <string name="conversation_system_group">群组消息</string>
    <string name="conversation_del">删除会话</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="home_contact_tab">联系人</string>
    <string name="new_friend">新朋友</string>
    <string name="public_group">公开群</string>
    <string name="discuss_group">讨论组</string>
    <string name="chatroom">聊天室</string>
    <string name="addfriend">添加好友</string>
    <string name="contact_add_group">添加群组</string>
    <string name="manangergroup">管理分组</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_logout_fail">退出登录失败，请稍后重试</string>
    <string name="setting_friend_confirm">好友申请</string>
    <string name="setting_black_list">黑名单</string>
    <string name="setting_message_notify">消息提醒</string>
    <string name="setting_about">关于</string>
    <string name="setting_friend_need_confirm">需验证</string>
    <string name="setting_nick_name_change">修改昵称</string>
    <string name="setting_friend_confirm_change_err">修改验证类型失败</string>
    <string name="search_default">搜索</string>
    <string name="search_cancel">取消</string>
    <string name="search_hint">搜索ID或手机号</string>
    <string name="search_no_result">很抱歉，没有找到符合内容</string>
    <string name="title_addfri">添加好友</string>
    <string name="add_detail_ID">帐号ID</string>
    <string name="add_detail_name">备注名</string>
    <string name="add_detail_group">分组</string>
    <string name="add_detail_message">附加消息</string>
    <string name="add_friend_send">发送添加好友请求</string>
    <string name="add_friend_succeed">请求已发送</string>
    <string name="add_friend_added">已添加好友</string>
    <string name="add_friend_refuse_all">对方拒绝添加任何人为好友</string>
    <string name="add_friend_to_blacklist">我在对方的黑名单中</string>
    <string name="add_friend_error">添加好友失败，请稍后重试</string>
    <string name="add_friend_del_black_list">添加失败，该用户在你的黑名单中，是否将该用户从黑名单中移除（你需要在移除成功后重发添加好友请求）</string>
    <string name="add_friend_del_black_err">移出黑名单失败</string>
    <string name="add_friend_del_black_succ">移出黑名单成功</string>
    <string name="title_manager_group">分组管理</string>
    <string name="add_new_group">添加分组</string>
    <string name="add_dialog_title">添加分组</string>
    <string name="add_dialog_subtitle">请输入新分组的名称</string>
    <string name="add_dialog_null">分组名称不能为空</string>
    <string name="title_confirm_delete_group">确认删除改分组吗？</string>
    <string name="delete_dialog_subtitle">删除分组</string>
    <string name="profile_back">返回</string>
    <string name="title_create_group">创建群</string>
    <string name="subtitle_create_group_name">群名称</string>
    <string name="btn_add_member">添加群成员</string>
</resources>