<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="7dp"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:src="@drawable/icon_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:textColor="@color/mainfont"
            android:text="@string/home_setting_tab"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_account"
        android:layout_marginTop="1dp"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:gravity="left|center"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/mainfont"
        android:text="@string/Accountandsecurity"
        />

    <TextView
        android:layout_marginTop="3dp"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:gravity="left|center"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/mainfont"
        android:text="@string/Messagenotification"
        />

    <TextView
        android:id="@+id/tv_about"
        android:layout_marginTop="1dp"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:gravity="left|center"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/mainfont"
        android:text="@string/About_flicker"

        />

    <TextView
        android:layout_marginTop="1dp"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:gravity="left|center"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/mainfont"
        android:text="@string/Privacy"

        />

    <TextView
        android:layout_marginTop="3dp"
        android:background="@color/colorAccent"
        android:paddingLeft="15dp"
        android:gravity="left|center"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/mainfont"
        android:text="@string/Cleanupcaching"

        />

    <LinearLayout
        android:layout_marginTop="1dp"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_logout"
            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/button_shape"
            android:text="@string/setting_logout"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"
            />

    </LinearLayout>


</LinearLayout>
