<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="7dp"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:src="@drawable/icon_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:textColor="@color/mainfont"
            android:text="@string/Modifythepassword"
            />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/ll_password"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:gravity="left|center"
        android:background="@color/colorAccent"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Old_cipher"
            android:textColor="@color/home_title_color"
            />

        <EditText
            android:id="@+id/et_Old_cipher"
            android:maxLength="16"
            android:inputType="textPassword"
            android:layout_marginLeft="8dp"
            android:textSize="12dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_Prompt"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/test_cursor_shape"/>


    </LinearLayout>

    <LinearLayout
        android:paddingTop="1dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:gravity="left|center"
        android:background="@color/colorAccent"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/New_password"
            android:textColor="@color/home_title_color"
            />

        <EditText
            android:id="@+id/et_Newpassword_one"
            android:maxLength="16"
            android:inputType="textPassword"
            android:layout_marginLeft="8dp"
            android:textSize="12dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_newpassword"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/test_cursor_shape"/>


    </LinearLayout>



    <LinearLayout
        android:paddingTop="1dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:gravity="left|center"
        android:background="@color/colorAccent"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirmthe_newpassword"
            android:textColor="@color/home_title_color"
            />

        <EditText
            android:id="@+id/et_Newpassword_two"
            android:maxLength="16"
            android:inputType="textPassword"
            android:layout_marginLeft="8dp"
            android:textSize="12dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_newpassword"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/test_cursor_shape"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_code_pwd"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forgetthepassword"/>

        <Button
            android:id="@+id/bt_modification"
            android:layout_marginTop="15dp"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/button_shape"
            android:text="@string/app_modify_Confirmationofmodification"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"
            />

    </LinearLayout>




</LinearLayout>
