<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_select_album"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="@dimen/egg_font_size_xxx"
        android:textColor="@color/home_title_color"
        android:text="@string/title_select_album"
        android:background="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color"
        />

    <TextView
        android:id="@+id/tv_take_pic"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="@dimen/egg_font_size_xxx"
        android:textColor="@color/home_title_color"
        android:text="@string/title_take_pic"
        android:background="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/bg_color"
        />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="@dimen/egg_font_size_xxx"
        android:textColor="@color/home_title_color"
        android:text="@string/cancel"
        android:background="@color/white"
        />
</LinearLayout>