<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_share"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="21dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/share_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_share_friend"
            android:gravity="center_horizontal"
            android:text="@string/share_shanduo_friend"
            android:textSize="@dimen/share_font_size"
            android:textColor="@color/font_color_gray"
            android:background="?android:attr/selectableItemBackground"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/share_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_share_wechat"
            android:gravity="center_horizontal"
            android:text="@string/share_wechat"
            android:textSize="@dimen/share_font_size"
            android:textColor="@color/font_color_gray"
            android:background="?android:attr/selectableItemBackground"
            />

        <TextView
            android:id="@+id/share_wechat_coment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_share_wechatmoment"
            android:gravity="center_horizontal"
            android:text="@string/share_wechat_coment"
            android:textSize="@dimen/share_font_size"
            android:textColor="@color/font_color_gray"
            android:background="?android:attr/selectableItemBackground"
            />

        <TextView
            android:id="@+id/share_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_share_qq"
            android:gravity="center_horizontal"
            android:text="@string/share_qq"
            android:textSize="@dimen/share_font_size"
            android:textColor="@color/font_color_gray"
            android:background="?android:attr/selectableItemBackground"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/share_qzone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_share_qzone"
            android:gravity="center_horizontal"
            android:text="@string/share_qzone"
            android:textSize="@dimen/share_font_size"
            android:textColor="@color/font_color_gray"
            android:background="?android:attr/selectableItemBackground"
            />

        <TextView
            android:id="@+id/share_sina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_share_sina"
            android:gravity="center_horizontal"
            android:text="@string/share_sina"
            android:textSize="@dimen/share_font_size"
            android:textColor="@color/font_color_gray"
            android:background="?android:attr/selectableItemBackground"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="17dp"
        >

        <TextView
            android:id="@+id/share_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_share_report"
            android:gravity="center_horizontal"
            android:text="@string/share_report"
            android:textSize="@dimen/share_font_size"
            android:textColor="@color/font_color_gray"
            android:background="?android:attr/selectableItemBackground"
            />

        <TextView
            android:id="@+id/share_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/icon_delete"
            android:text="@string/share_delete"
            android:textSize="@dimen/share_font_size"
            android:textColor="@color/font_color_gray"
            android:background="?android:attr/selectableItemBackground"
            android:visibility="invisible"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="12dp"
            android:textColor="@color/home_title_color"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="12dp"
            android:textColor="@color/home_title_color"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="12dp"
            android:textColor="@color/home_title_color"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="12dp"
            android:textColor="@color/home_title_color"
            />

    </LinearLayout>

    </LinearLayout>

</LinearLayout>