<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".im.ui.CreateGroupActivity"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    >

    <com.tencent.qcloud.ui.TemplateTitle
        android:id="@+id/create_group_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:backText="@string/profile_back"
        app:canBack="true"
        app:titleText="@string/title_create_group" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/subtitle_create_group_name" />

        <EditText
            android:id="@+id/input_group_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textCursorDrawable="@null"
            />
    </LinearLayout>

    <Button
        android:id="@+id/bt_create_group"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:text="CREATE GROUP"
        android:visibility="gone"
        />

    <RelativeLayout
        android:id="@+id/rl_count"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="群人数上限:200"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_right"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_add_group_member"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_positive_btn"
        android:textColor="@color/text_btn"
        android:gravity="center"
        android:text="@string/btn_add_member" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:text="普通用户最多可创建：2个200人群"
        android:textSize="@dimen/egg_font_size"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:text="VIP用户最多可创建：5个200人群,2个500人群"
        android:textSize="@dimen/egg_font_size"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:text="SVIP用户最多可创建：5个200人群,3个500人群,2个1000人群"
        android:textSize="@dimen/egg_font_size"
        />

</LinearLayout>